--- a/cpc/index.html
+++ b/cpc/index.html
@@ -49,6 +49,7 @@
 			talon.querySelector('.numeroTalon').textContent = i;
 			document.getElementById("talons").appendChild(talon);
 		}
+		window.print();
 	};
 	</script>
 </body>
