--- a/cpc/index.html
+++ b/cpc/index.html
@@ -49,7 +49,9 @@
 			talon.querySelector('.numeroTalon').textContent = i;
 			document.getElementById("talons").appendChild(talon);
 		}
-		window.print();
+		setTimeout(function(){
+			window.print();
+		}, 500);
 	};
 	</script>
 </body>
